[metadata]
name = maint_notice_processor
version = 0
description = Maintenance Notification Processor
license = MIT

[options]
packages = find:
install_requires =
    python_version >= "3.8"
    setuptools
    python-dateutil

[options.entry_points]
console_scripts =
    mnp-parse = maint_notice_processor.maint_notice_parser_text:MaintNoticeParserText.cli_entry_point
